@@ -50,7 +50,12 @@ module Technoweenie # :nodoc:
         protected
           # Destroys the file.  Called in the after_destroy callback
           def destroy_file
-            FileUtils.rm full_filename rescue nil
+            FileUtils.rm full_filename
+            # remove directory also if it is now empty
+            Dir.rmdir(File.dirname(full_filename)) if (Dir.entries(File.dirname(full_filename))-['.','..']).empty?
+          rescue
+            logger.info "Exception destroying  #{full_filename.inspect}: [#{$!.class.name}] #{$1.to_s}"
+            logger.warn $!.backtrace.collect { |b| " > #{b}" }.join("\n")
           end
 
           # Renames the given file before saving
