@@ -38,11 +38,7 @@ module Mocha
     end
 
     def match?(method_name, *arguments)
-      if @parameter_block then
-        @parameter_block.call(*arguments)
-      else
-        (@method_name == method_name) and (@parameters == arguments)
-      end
+      (@method_name == method_name) and (@parameter_block ? @parameter_block.call(*arguments) : (@parameters == arguments))
     end
 
     # :startdoc:
@@ -251,7 +247,7 @@ module Mocha
     end
     
     def error_message(expected_count, actual_count)
-      "#{@mock.mocha_inspect}.#{method_signature} - expected calls: #{expected_count}, actual calls: #{actual_count}"
+      "#{@mock.mocha_inspect}.#{method_signature} - expected calls: #{expected_count.mocha_inspect}, actual calls: #{actual_count}"
     end
   
     # :startdoc:
