@@ -2,6 +2,8 @@ require 'simply_helpful/record_identification_helper'
 require 'simply_helpful/record_identifier'
 require 'simply_helpful/record_tag_helper'
 
+require 'simply_helpful/polymorphic_routes'
+
 require 'simply_helpful/jsg_extensions'
 require 'simply_helpful/av_extensions'
 require 'simply_helpful/form_helper_extensions'
